# buckswood-post-plugins

./: .gitignore  Buckswood_IMAX_CinemaLooks_v01.dctl  Buckswood_IMAX_LargeFormat_v01.dctl  Buckswoodfilmemulation.dctl  Buckswoodfilmemulation_SAFE_LOADER.dctl  CHANGELOG.md  LICENSE  README.md
Buckswood_AI_Photorealizer/: INSTALL_STEP_BY_STEP.md  Info.plist  Makefile  README.md
Buckswood_AutoGrade_Assistant/: README.md  vision_prompt.md
Buckswood_Cinematic_Tools/: DOCUMENTATION_DE.md  DOCUMENTATION_EN.md  Info.plist  Makefile  OPEN_SOURCE_ROADMAP.md  README.md  requirements-companion.txt
Buckswood_Fake_Diagnostic/: DOCUMENTATION_DE.md  DOCUMENTATION_EN.md  Info.plist  Makefile  README.md
Buckswood_Film_Emulation/: DOCUMENTATION_DE.md  DOCUMENTATION_EN.md  Info.plist  Makefile  README.md  RESEARCH_NOTES.md  TEMPORAL_ML_BACKEND.md
Buckswood_Lens_Physics/: INSTALL_STEP_BY_STEP.md  Info.plist  Makefile  README.md  install_buckswood_lens_physics.command
Buckswood_Look_DNA/: DOCUMENTATION_DE.md  DOCUMENTATION_EN.md  Info.plist  LOOK_PROFILE_FORMAT.md  Makefile  README.md
premiere_port/: CMakeLists.txt  PREMIERE_EFFECT_GUIDE.md  README_PREMIERE_NATIVE.md  README_PREMIERE_PORT.md  README_PREMIERE_WINDOWS.md
premiere_port/native/resources/: BuckswoodAIPhotorealizerPiPL.r  BuckswoodFakeDiagnosticPiPL.r  BuckswoodFilmEmulationPiPL.r  BuckswoodFrameDirectorPiPL.r  BuckswoodLensPhysicsPiPL.r  BuckswoodLookDNAPiPL.r  BuckswoodPremierePiPLCommon.r  BuckswoodRadianceRecoverPiPL.r  BuckswoodTemporalIntegrityPiPL.r
premiere_port/native/scripts/: build_premiere_plugins.sh  build_premiere_windows_plugins.sh  install_premiere_plugins.command  install_premiere_plugins_windows.bat
premiere_port/native/src/: BuckswoodPremiereNative.cpp
premiere_port/scripts/: build_adapter_smoketest.sh  open_adobe_sdk_download.command  package_premiere_port_source.sh
premiere_port/src/: BuckswoodPremiereAdapter.cpp  BuckswoodPremiereAdapter.h  PremiereAdapterSmokeTest.cpp
premiere_port/windows_installer/: installer.cpp  installer.manifest  installer.rc
(+135 files in other folders)
